# LlmKnowledgeGraph

./: Dockerfile  MAINFEST.IN  cleanText.py  consumer.py  graph.py  knowledge_graph.py  nerNel.py  pyproject.toml  readme.md  readme.py.md  refreshDatabase.sh  relationships.py  requirements.txt  startNeo.sh  working_example.ipynb
.github/workflows/: python-publish.yml
DataPipeline/: MongoDbEntityExtractorDockerfile  RabbitMqKnowledgeGraphDockerFile  build-consumers.ch  mongodb_entity_extractor.py  rabbitmq_knowledge_graph_builder.py  startRabbitMqKnowledgeGraph.sh
Evaluation/: evaluate.py  evaluate.sh
InferenceApi/: entityInference.py  prompts.py  relationshipInference.py
Infrastructure/Neo4j/: queries
JupyterNotebooks/: mlflow.ipynb  working_example.ipynb  working_example_simple_prompt.ipynb  working_google_extractor.ipynb
KnowledgeGraph/: graph.py
consumers/mongodb_entitiy_decorator/: Dockerfile  main.py  mongodb_entity_extractor.py  requirements.txt
consumers/pdfs_to_kg_builder/: Dockerfile  document_consumer.py  main.py  pdf_consumer.py  requirements.txt  start.sh  verify_changes.py
consumers/rabbit_mq_kg_builder/: Dockerfile  (+3 more)
documentation/: experiment_latency.md  experiment_system_prompt.md
evaluation/: eval_f1.csv  eval_latency_ms.csv  eval_precision.csv  eval_recall.csv  evaluation.ipynb  ranker.py
notebooks/: knowledge_graph.ipynb  ner.ipynb  ner_debug.py
quantization/: quantize_gemma.py  quantize_gemma2.py  quantize_gemma_gptq.py
scripts/: build-consumers.sh  evaluate.sh  startMongoDbEntityDecorator.sh  startMongoDbEntityExtractor.sh
(+23 files in other folders)
